<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:checked="true"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/notes_nav_menu" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/courses_nav_menu" />
    </group>
</menu>