...
    <string name="previous">Previous</string>

    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="edit_note">Edit Note</string>
    <string name="close_navigation">Close Navigation Drawer</string>
    <string name="open_navigation">Open Navigation Drawer</string>
    <string name="note_title">Note Title</string>
    <string name="course_title">Course Title</string>
    <string name="notes_nav_menu">Notes</string>
    <string name="courses_nav_menu">Courses</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
...
    <string name="preference_titile_email_address_">Enter Email Address</string>
    <string name="preference_application_mode">application_mode</string>
    <string name="preference_application_theme">Application Theme</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="remind_me">Remind Me</string>
    <string name="send_mail">Send mail</string>
    <string name="set">Set</string>
    <string name="not_set">Not Set</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
...
