<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include layout="@layout/content_note_list"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:forceDarkAllowed="false"
        android:src="@drawable/ic_add_circle_black_24dp"
        android:tint="@color/colorGreen"
        app:backgroundTint="#FFFFFF"
        app:fabSize="auto"
        app:useCompatPadding="false" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
